--- a/jiniaStyles.css
+++ b/jiniaStyles.css
@@ -38,6 +38,34 @@ body {
     flex-direction: column;
 }
 
+
+/*section part*/
+section {
+    padding: 300px; /* Adds vertical padding to each section */
+    height: 100vh;    /* Each section takes up full screen height */
+}
+
+#about {
+    background-color: lightgray; /* Different backgrounds for visibility */
+}
+
+#skills{
+    background-color: lightblue;
+}
+
+#education{
+    background-color: lightpink;
+}
+
+#contact{
+    background-color: lightyellow;
+}
+
+/* Smooth scrolling effect */
+html {
+    scroll-behavior: smooth;
+}
+
 /* Navigation Menu Styling */
 header {
     padding: 20px;
